--- a/Housing.ipynb
+++ b/Housing.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "def fetch_housing_data(housing_url=HOUSING_URL, housing_path=HOUSING_PATH):\n",
     "     if not os.path.isdir(housing_path):\n",
-    "             os.makedirs(housingpath)\n",
+    "             os.makedirs(housing_path)\n",
     "     tgz_path = os.path.join(housing_path, \"housing.tgz\")\n",
     "     urllib.request.urlretrieve(housing_url, tgz_path)\n",
     "     housing_tgz = tarfile.open(tgz_path)\n",
